--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,6 @@ spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.boot.web.embedded.tomcat=INFO
 spring.devtools.restart.enabled=true
